--- a/main.css
+++ b/main.css
@@ -435,6 +435,10 @@ h5 {
     margin-top: 18vh;
   }
 
+  .character-creation__message {
+    margin: 0 20vw;
+  }
+
   .name,
 .class__selector,
 .species__selector {
@@ -447,7 +451,7 @@ h5 {
   }
 
   .ability {
-    margin: 3vh 5vw;
+    margin: 2vh 5vw;
   }
 
   .game__menu {
